hydromel/tests/errors/sem-indexing-non-comp-inst.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    port x : in unsigned(32)
    port y : out unsigned(32)
    # ERROR: Expression is neither a composite port nor an instance
    y<0> = x
end
